@@ -1,3 +1,9 @@
+2001-08-08  Bill Gribble  <grib@billgribble.com>
+
+	* fix Makefile.am in various places to clean up libtool 
+	problems.  These changes may still need fine tuning to make 
+	everything work with both libtool 1.4 and 1.3.5
+
 2001-08-08  Dave Peticolas  <dave@krondo.com>
 
 	* src/engine/engine-helpers.[ch]: remove cruft
